# osdb-dcdb

./: CMakeCache.txt  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  Makefile.bak  Makefile.in  README  cmake_install.cmake  config.status  configure  configure.in  libtool
config/Automake/: Config.pm
contrib/: README.win32
doc/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  cmake_install.cmake  progress.make
extras/ActiveState_dll/: README
extras/ActiveState_dll/tests/: flogadd1.tcl  flogcont1.tcl  flogdel1.tcl  flogdel2.tcl  flogdel3.tcl  flognum1.tcl  flogreindex1.tcl  mkdata.tcl  run_multi.bat  test.bat  test.tcl
extras/break_tcc/: bcnum.c  bcnum.h  block.c  block.h  blowfish  blowfish.c  blowfish.h  cdb.c  cdbadd.c  cdbdf.c  cdbedit.c  cdbindex.c  cdbmove.c  cdbpack.c  cdbpp.h  cdbtable.c  cdbui.c  cdbutils.c  cdbws.c  ch.h  container.c  container.h  crc32.h  dcdb_config.h  flogadd1.c  flogadd1_tcc.sh  flogadd2.c  flogadd2_tcc.sh  flogdel1.c  flogdel1_tcc.sh  flognum1.c  flognum1_tcc.sh  idxblk.c  index.c  index.h  interface.h  md32_common.h  md5  md5_dgst.c  md5_one.c  (+23 more)
extras/cint/: Makefile  README  cint_cdb.h  cleanup.sh  mk_mycint.sh
extras/cint/scripts/: cint_types.h  flogadd1.c  flogadd1.sh  mkbin.sh  mkdata.c  rmtab.sh
extras/fido/: README  fido.default.config  fido.linux.config  fido.solaris.config
extras/fido/chx/: README  chx  chx_get_file_lists.shl  chx_get_file_lists.tcl  chx_solaris_contents  filter_solaris8_contents_file.shl
extras/fido/fido/: clean.sh  fido  fido.default.config  fido.dir  fido.noenc  fido.solaris.config  fido_proc.c  make_fido_proc.sh  rough_sort.c  sample.fido.fil  sample.linux.fido.dir  sample.linux.fido.excl  sample.solaris.fido.dir  sample.solaris.fido.excl
extras/fido/fidod/: TODO  fido.linux.config  fido_change_list  fido_chx  fido_compare.c  fido_list  fido_rename  fido_update  fidod  fidod.enc  make_fido_compare.sh
extras/fido/tfido/: tfido  tfidod
extras/perl_examples/: README  example1.pl  example2.pl  example3.pl
extras/regress_test/: README  clean.sh  flogadd.c  flogadd.sh  flogadd2.c  flogadd2.sh  flogdel.c  flogdel.sh  flogdel2.c  flogdel2.sh  flogdel3.c  flogdel3.sh  flogdelidx.c  flogdelidx.sh  flogdelidx2.c  flogdelidx2.sh  flogidx.c  flogidx.sh  floglhshl.c  floglhshl2.c  floglhshl2.sh  flogndelidx.c  flogndelidx.sh  flogndelidx2.c  flogndelidx2.sh  flognewadd.c  flognewadd.sh  flognidx.c  flognidx.sh  flognshl.c  flognshl.sh  flogridx.c  flogridx.sh  flogrmshl.c  flogrmshl.sh  flogshl.c  flogshl.sh  flogshl2.c  flogshl2.sh  flogshl3.c  (+14 more)
extras/rpm/: README  dcdb.spec
extras/tcl/: cdb.tcl  ex1.txt  ex2.txt  ex3.txt  ex4.txt  ex5.txt  ex6.txt  ex7.txt  mk_pkg.sh  pkgIndex.tcl  test_cdb.tcl
extras/tools/: README  build.sh  dbdump.c  dfgen.c  tablels.tcl  tableshow.tcl
include/: bcnum.h  block.h  cdb.h  cdbpp.h  cdf_example.txt  container.h  crc32.h  dcdb_config.h  dcdb_config.h.in  disclaim.tex  index.h  interface.h  mgetopt.h  mtoken.h  sort.h  stamp-h1  test.h  win32Util.h
include/blowfish/: blowfish.h
include/md5/: md5_locl.h
include/ripemd/: rmd_locl.h
include/sha1/: sha_locl.h
lib/: CMakeLists.txt  Makefile  Makefile.in  bcnum.c  block.c  blowfish.c  build_mingw.sh  cdb.c  cdbadd.c  cdbdf.c  cdbedit.c  cdbindex.c  cdbmove.c  cdbpack.c  cdbpl.i  cdbpy.i  cdbpy.py  cdbtable.c  cdbtcl.i  cdbtcl.i.new  cdbtcl_mgw.i  cdbui.c  cdbutils.c  cdbws.c  cmake_install.cmake  container.c  conttcl.i  crc32.c  idxblk.c  index.c  md5.c  md5_dgst.c  md5_one.c  number.c  qsort.c  rmd160.c  rmd_dgst.c  rmd_one.c  sha1.c  sha1_one.c  (+6 more)
sort/: README  calc_field.sh  clean.sh  dcdb_config.h  flogshl.c  flogshl.sh  flogshl2.c  flogshl2.sh  flogshl3.c  flogshl3.sh  flogshsort.c  flogshsort.sh  makem.sh  mkdups  mkdups.c  outstats.c  outstats.sh  qsort.c  sort.c  sort.h  words  words.c  words2.c
tests/: Makefile  Makefile.am  Makefile.in  atconfig  cmake_install.cmake  debug_opts  test_c.sh.in  test_py.sh  test_tcc.sh.in  test_tcl.sh.in
tests/c/: flogadd1.c  flogadd1.sh  flogadd2.c  flogadd2.sh  flogdel1.c  flogdel1.sh  flogdel2.c  flogdel2.sh  flogdel3.c  flogdel3.sh  flogenc1.c  flogenc1.sh  floghash1.c  floghash1.sh  flognum1.c  flognum1.sh  flognum2-gen.c  flognum2.bc  flognum2.c  flognum2.sh  flograwadd1.c  flogreindex1.c  flogreindex1.sh  flogthrd1.c  flogthrd1.sh  flogthrd2-exp.c  flogthrd2.c  flogthrd2.sh  flogupd1.c  flogupd1.sh  mkdata.c  rough_sort.c
tests/python/: flogadd1.py  flogadd1.sh  flogadd2.py  flogadd2.sh  flogdel1.py  flogdel1.sh  flogdel2.py  flogdel2.sh  flogdel3.py  flogdel3.sh  flogenc1.py  flogenc1.sh  flognum1.py  flognum1.sh  flogreindex1.py  flogreindex1.sh  flogupd1.py  flogupd1.sh  mkdata.py
tests/tcc/: flogadd1.c  flogadd1_tcc.sh  flogadd2.c  flogadd2_tcc.sh  flogdel1.c  flogdel1_tcc.sh  flogdel2.c  flogdel2_tcc.sh  flogdel3.c  flogdel3_tcc.sh  flogenc1.c  flogenc1_tcc.sh  floghash1.c  floghash1_tcc.sh  flognum1.c  flognum1_tcc.sh  flognum2-gen.c  flognum2.c  flognum2_tcc.sh  flograwadd1.c  flograwadd1_tcc.sh  flogreindex1.c  flogreindex1_tcc.sh  flogthrd1.c  flogthrd1_tcc.sh  flogupd1.c  flogupd1_tcc.sh  mkdata.c  rough_sort.c  words.c
tests/tcl/: flogadd1.sh  flogadd1.tcl  flogadd2.sh  flogadd2.tcl  flogcont1.sh  flogcont1.tcl  flogdel1.sh  flogdel1.tcl  flogdel2.sh  flogdel2.tcl  flogdel3.sh  flogdel3.tcl  flogenc1.sh  flogenc1.tcl  flognum1.sh  flognum1.tcl  flognum2-gen.tcl  flognum2.bc  flognum2.sh  flognum2.tcl  flogreindex1.sh  flogreindex1.tcl  flogupd1.sh  flogupd1.tcl  flogverify1.sh  flogverify1.tcl  mkdata.tcl  mkstr.tcl
